k8s/grpcservicea-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpcservicea
spec:
  replicas: 2
  selector:
    matchLabels:
      app: grpcservicea
  template:
    metadata:
      labels:
        app: grpcservicea
    spec:
      containers:
      - name: grpcservicea
        image: varungupta2809/grpcservicea:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: grpcservicea
spec:
  selector:
    app: grpcservicea
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
