k8s/grpcserviceb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpcserviceb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: grpcserviceb
  template:
    metadata:
      labels:
        app: grpcserviceb
    spec:
      containers:
      - name: grpcserviceb
        image: varungupta2809/grpcserviceb:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: grpcserviceb
spec:
  selector:
    app: grpcserviceb
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
